# bt

./: .gitignore  README.md  ble.ino  ble.py  bt.py  dashboard.py  gatt_uuids.py  packet_logger.py  pyproject.toml  rssi_monitor.py  security_audit.py  test_cli.py  uv.toml
arduino_test/: bt_test.ino
static/: dashboard.html
